<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/puzzle_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:ems="10"
        android:inputType="none" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/variables_button"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:text="@string/variables" />

    <Button
        android:id="@+id/relations_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/relations" />

    <Button
        android:id="@+id/hints_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/hints" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/save" />

</LinearLayout>